changed formatting of files, especially indenting of variables